# job_insight_104

./: .aiignore  .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: deploy.yml
apps/crawler/: README.md  constants.py  crawler.py  crawler_v2.py  orchestrator.py  processor.py  searcher.py  storage.py
apps/scheduler/: scheduler.py
apps/visualization/: app.py
apps/visualization/analysis/: df_utils.py  job_data_analyzer.py  trend_analyzer.py
apps/visualization/components/: __init__.py  filter_info.py  footer.py  header.py  sidebar.py
apps/visualization/nav/: __init__.py  daily_changes_page.py  dashboard_page.py  hiring_efficiency_page.py  industry_trends_page.py  salary_location_page.py
config/: code_tables.py  settings.py
data/code_tables/: area_codes.json  industry_codes.json  job_cat_codes.json
src/aws/: s3.py
src/database/: duckdb_manager.py  mongodb_manager.py
src/job_insight_104.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/transfer/: transfer_mongodb_to_duckdb.py
src/utils/: config_loader.py  http_adapter.py  text_processing.py
